--- a/client/src/output.css
+++ b/client/src/output.css
@@ -596,6 +596,11 @@ body {
   display: none;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -664,12 +669,12 @@ body {
   min-height: 60px;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-2\/4 {
-  width: 50%;
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-20 {
@@ -688,16 +693,8 @@ body {
   width: 100%;
 }
 
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-36 {
-  width: 9rem;
+.min-w-\[36rem\] {
+  min-width: 36rem;
 }
 
 .flex-1 {
@@ -882,13 +879,13 @@ body {
   padding-bottom: 0.5rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .pb-0 {
   padding-bottom: 0px;
+}
+
+.\!text-lg {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
 }
 
 .text-\[0\.8rem\] {
@@ -978,6 +975,18 @@ body {
 
 .underline-offset-4 {
   text-underline-offset: 4px;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .shadow {
