--- a/client/src/output.css
+++ b/client/src/output.css
@@ -731,6 +731,10 @@ body {
   margin-bottom: 1rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -875,6 +879,10 @@ body {
   min-height: 60px;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .w-1\/4 {
   width: 25%;
 }
@@ -897,10 +905,6 @@ body {
 
 .w-2\.5 {
   width: 0.625rem;
-}
-
-.w-2\/5 {
-  width: 40%;
 }
 
 .w-20 {
@@ -939,6 +943,18 @@ body {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[50rem\] {
+  width: 50rem;
+}
+
+.w-\[150rem\] {
+  width: 150rem;
+}
+
 .min-w-\[25rem\] {
   min-width: 25rem;
 }
@@ -949,6 +965,10 @@ body {
 
 .min-w-\[8rem\] {
   min-width: 8rem;
+}
+
+.min-w-\[30rem\] {
+  min-width: 30rem;
 }
 
 .max-w-lg {
@@ -1451,10 +1471,6 @@ body {
 
 .pr-2 {
   padding-right: 0.5rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
 }
 
 .pt-5 {
